<resources>
    <string name="app_name">三角形计算器</string>
    <string name="help_name">帮助</string>
    <string name="setting_name">设置</string>
    <string name="browse_name">查看</string>
    <string name="prompt">提示</string>
    <string name="result">计算结果：</string>
    <string name="calculating">正在计算请稍候…</string>
    <string name="alter">修 改</string>
    <string name="calculate">计 算</string>
    <string name="clear">清 空</string>
    <string name="textPre">图中有</string>
    <string name="textPost">个三角形</string>
    <string name="ensureClear">确定清空图中的线段吗？</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="ensureRemove">确定删除此线段吗？</string>
    <string name="requestClear">请先清空绘图区</string>
    <string name="exit_string">再按一次退出</string>
    <string name="magnify_one_times">放大×1</string>
    <string name="magnify_two_times">放大×2</string>
    <string name="click_remove">点击删除</string>
    <string name="line_remove">划线删除</string>
    <string name="initialize">初始化图形</string>
    <string name="equilateral_triangle">等边三角形</string>
    <string name="isosceles_triangle">等腰三角形</string>
    <string name="rectangular">长方形</string>
    <string name="square">正方形</string>
    <string name="default_draw">默认绘制</string>
    <string name="lock_degree_draw">锁定角度</string>
    <string name="lock_mid_point_draw">锁定中点</string>
    <string name="drawer_open">侧边栏打开</string>
    <string name="drawer_close">侧边栏关闭</string>
    <string name="setting">设置</string>
    <string name="save">收藏</string>
    <string name="browse">查看</string>
    <string name="avail_anim_drawer">开启侧滑动画</string>
    <string name="avail_gesture_drawer">开启手势侧滑</string>
    <string name="file_not_found">文件未找到</string>
    <string name="file_read_exception">文件读取异常</string>
    <string name="file_write_exception">文件写入异常</string>
    <string name="force_init">强制初始化图形</string>
    <string name="clear_file">清除缓存</string>
    <string name="update">版本更新</string>
    <string name="help">查看帮助</string>
    <string name="about">关于作者</string>
    <string name="author">QQ:1107637961</string>
    <string name="clear_cache"><font color="gray">确定要删除所有缓存吗？所有收藏的内容均会被清除。</font></string>
</resources>
