<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/left_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/zeroAlpha">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/radio_remove_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/click_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_remove"
                    android:textColor="@android:color/black"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/line_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_remove"
                    android:textColor="@android:color/black"/>
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/initialize"
                android:textSize="@dimen/init_text_size"
                android:textColor="@color/blackGray"/>
            <Button
                android:id="@+id/button_equilateral"
                android:layout_width="@dimen/init_button_width"
                android:layout_height="@dimen/init_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/equilateral_triangle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_selector"/>
            <Button
                android:id="@+id/button_isosceles"
                android:layout_width="@dimen/init_button_width"
                android:layout_height="@dimen/init_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/isosceles_triangle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_selector"/>
            <Button
                android:id="@+id/button_rectangular"
                android:layout_width="@dimen/init_button_width"
                android:layout_height="@dimen/init_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/rectangular"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_selector"/>
            <Button
                android:id="@+id/square"
                android:layout_width="@dimen/init_button_width"
                android:layout_height="@dimen/init_button_height"
                android:layout_gravity="center_horizontal"
                android:text="@string/square"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_selector"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/left_fixed_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/setting"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="@dimen/left_fixed_font_size"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:drawableLeft="@drawable/collection"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center"
            android:textSize="@dimen/left_fixed_font_size"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:drawableLeft="@drawable/browse"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center"
            android:textSize="@dimen/left_fixed_font_size"
            android:textColor="@android:color/black"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

